[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/mapgen/Sprite1.gd" type="Script" id=1]
[ext_resource path="res://scripts/mapgen/Sprite2.gd" type="Script" id=2]
[ext_resource path="res://scripts/mapgen/TextureRectFinalDisplay.gd" type="Script" id=3]
[ext_resource path="res://material/MapGenShaderMaterial.tres" type="Material" id=4]
[ext_resource path="res://scripts/mapgen/MapGen.gd" type="Script" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport2")

[node name="MapGen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Viewport1" type="Viewport" parent="."]
transparent_bg = true

[node name="Sprite1" type="Sprite" parent="Viewport1"]
material = ExtResource( 4 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Viewport2" type="Viewport" parent="."]
transparent_bg = true

[node name="Sprite2" type="Sprite" parent="Viewport2"]
material = ExtResource( 4 )
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="TextureRectFinalDisplay" type="TextureRect" parent="."]
texture = SubResource( 1 )
script = ExtResource( 3 )
